# valentine-proposal

./: .gitignore  README.md  main.py  pyproject.toml
static/css/: style.css
static/js/: script.js
templates/: base.html  gallery.html  index.html  upload.html
