[tool.poetry]
name = "valentine-website"
version = "0.1.0"
description = "A simple, elegant Valentine proposal website"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "main.py"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-multipart = "^0.0.9"
jinja2 = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
